<resources>
    <string name="app_name">CashCockpit</string>
    <string name="publisher_name">Dolinsek App</string>
    <string name="title_select_category">Select Category</string>
    <string name="title_password_settings">Password Settings</string>
    <string name="title_cockpit_chart">Cockpit-Chart</string>
    <string name="tab_cockpit">Cockpit</string>
    <string name="tab_history">History</string>
    <string name="tab_statistics">Statistics</string>
    <string name="tab_database">Database</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_bills">Bills</string>
    <string name="tab_goals">Goals</string>
    <string name="tab_bank_accounts">Bank Accounts</string>
    <string name="tab_auto_pays">AutoPays</string>
    <string name="tab_categories">Categories</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="btn_restore_default_categories">Restore default Categories</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_create_category">Create Category</string>
    <string name="btn_set_goal">Set Goal</string>
    <string name="btn_add_subcategory">Add Subcategory</string>
    <string name="btn_create_auto_pay">Create AutoPay</string>
    <string name="btn_select">Select</string>
    <string name="btn_add_bill">Add Bill</string>
    <string name="btn_login">Login</string>
    <string name="btn_show_filters">Show Filters</string>
    <string name="btn_save_password">Save Password</string>
    <string name="btn_save_security_settings">Save Security Settings</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit_amount">Edit amount</string>
    <string name="btn_edit_description">Edit description</string>
    <string name="btn_change_category">Change category</string>
    <string name="btn_hide_filters">Hide Filters</string>
    <string name="btn_duplicate">Duplicate</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_watch_on_youtube">Watch on YouTube</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_select_category">Select Category</string>
    <string name="btn_save">Save</string>
    <string name="btn_create">Create</string>
    <string name="btn_sing_in">Sign In</string>
    <string name="btn_sing_out">Sign Out</string>
    <string name="btn_help">Help</string>
    <string name="btn_delete_data">Delete Data</string>
    <string name="hint_name">Name</string>
    <string name="hint_bank_account_name">Name of Bank Account</string>
    <string name="hint_goal_amount">Goal Amount</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_description">Description</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="label_primary_account">Primary Account</string>
    <string name="label_accounts">Accounts</string>
    <string name="label_categories">Categories</string>
    <string name="label_auto_pays">AutoPays</string>
    <string name="label_goals">Goals</string>
    <string name="label_enter_valid_amount">Enter a valid amount</string>
    <string name="label_enter_higher_goal_amount">You need to enter a higher Goal-Amount</string>
    <string name="label_weekly">Weekly</string>
    <string name="label_monthly">Monthly</string>
    <string name="label_yearly">Yearly</string>
    <string name="label_subcategory_delete_information">When deleting, all AutoPays and Bills are also removed!</string>
    <string name="label_currency">Currency</string>
    <string name="label_cash">Cash</string>
    <string name="label_cockpit">Cockpit</string>
    <string name="label_no_data_for_statistics">No data for statistics</string>
    <string name="label_summary">Summary</string>
    <string name="label_selected_month">Selected Month</string>
    <string name="label_average">Average</string>
    <string name="label_no_bills_found">No Bills found!</string>
    <string name="label_goals_usage">Goals usage</string>
    <string name="label_all_bill_types">All Bill-Types</string>
    <string name="label_no_description">No description</string>
    <string name="label_password_for_login_required">Password for Login required</string>
    <string name="label_general">General</string>
    <string name="label_added_bills_history">Added Bills history</string>
    <string name="label_password_settings">Password Settings</string>
    <string name="label_input">Input</string>
    <string name="label_output">Output</string>
    <string name="label_transfer">Transfer</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="label_total_outputs">Total Outputs</string>
    <string name="label_daily_limit">Daily Limit</string>
    <string name="label_installment">Installment</string>
    <string name="label_inputs">Inputs</string>
    <string name="label_outputs">Outputs</string>
    <string name="label_transfers">Transfers</string>
    <string name="label_fixed_costs">Fixed Costs</string>
    <string name="label_bills_in_database">%1$d bills</string>
    <string name="label_no_categories_found">No Categories found!</string>
    <string name="label_display_bill_creation_date">Bill created on %1$s</string>
    <string name="label_entered_passwords_dont_match">Entered Password doesn\'t match</string>
    <string name="label_password_reset_time">Password reset time</string>
    <string name="label_wrong_password">Wrong Password</string>
    <string name="label_please_enter_a_password">Please enter a Password</string>
    <string name="label_days_and_hours_until_password_reset">%1$d Day(s) and %2$d Hour(s) until password gets reset</string>
    <string name="label_hours_and_minutes_until_password_reset">%1$d Hour(s) and %2$d Minute(s) until password gets reset</string>
    <string name="label_select_category">Select Category</string>
    <string name="label_account">Account</string>
    <string name="label_sing_out">Sign Out</string>
    <string name="label_delete_data">Delete Data</string>
    <string name="label_show_data">Show Data</string>
    <string name="label_show_data_description">Displays you all your Data</string>
    <string name="label_euro">Euro</string>
    <string name="label_dollar">Dollar</string>
    <string name="label_pounds">Pounds</string>
    <string name="label_sort_categories">Sort categories</string>
    <string name="label_sort_categories_by_name_preference_description">Sort categories automatically by name</string>
    <string name="label_backup">Backup</string>
    <string name="label_backup_data">Backup Data</string>
    <string name="label_backup_data_preference_description">Backups your Data weekly automatically</string>
    <string name="label_backup_location">Backup Location</string>
    <string name="label_backup_location_preference_description">Location where the Backup is saved</string>
    <string name="label_make_backup">Make Backup</string>
    <string name="label_make_backup_preference_description">Manually makes a backup of your Data</string>
    <string name="label_synchronize_or_reset_data">Synch or Reset Data</string>
    <string name="label_synchronize_or_reset_data_preference_description">Overrides your Data with the most recent Backup on the server or locally. Can be used to synchronize data between devices.</string>
    <string name="label_on_your_mobile_phone">On your mobile phone</string>
    <string name="label_on_the_server">On the server</string>
    <string name="label_waiting_for_internet_connection">Waiting for internet connection…</string>
    <string name="label_creating_backup">Creating Backup…</string>
    <string name="label_backup_got_created">Backup got created</string>
    <string name="label_something_went_wrong">Something went wrong!</string>
    <string name="label_resetting_data">Resetting Data…</string>
    <string name="label_data_got_reset">Data got reset</string>
    <string name="label_sign_in">Sing In</string>
    <string name="label_delete_data_description">Please select which data you want to delete</string>
    <string name="label_deleting_data">Deleting Data</string>
    <string name="label_data_got_deleted">Data got deleted</string>
    <string name="label_auto_pay">AutoPay</string>
    <string name="label_newest_first">Newest first</string>
    <string name="label_oldest_first">Oldest first</string>
    <string name="label_highest_price_first">Highest price first</string>
    <string name="label_lowest_price_first">Lowest price first</string>
    <string name="btn_continue_without_sign_in">Continue without sign in</string>
    <string name="label_verification_code">Verification Code</string>
    <string name="label_read_phone_number">Read Phone Number</string>
    <string name="label_agree_to_cash_cockpit_privacy_statement_beginning">By signing in or continuing without sign in you agree to CashCockpit\'s</string>
    <string name="label_cash_cockpit_tutorial">CashCockpit Tutorial</string>
    <string name="label_cash_cockpit_tutorial_description">Watch the quick Video-Tutorial on YouTube to learn the CashCockpit basics</string>
    <string name="label_bank_account">Bank Account</string>
    <string name="label_bill_type">Bill Type</string>
    <string name="label_item_bank_account_details_text">%1$s and %2$d Bills</string>
    <string name="label_enter_valid_name">Enter a valid name</string>
    <string name="label_enter_name_already_exists">Entered name already exists</string>
    <string name="label_item_bank_account_bills">%1$d Bills</string>
    <string name="label_secondary_account">Secondary Account</string>
    <string name="label_item_auto_pays_details">%1$s %2$s (%3$s)</string>
    <string name="label_auto_pay_type">AutoPay Type</string>
    <string name="label_enter_valid_description">Enter valid description</string>
    <string name="label_security_settings">Security Settings</string>
    <string name="label_anonymously">Anonymously</string>
    <string name="label_help_description">If you need help or change your Sign In password contact us by pressing help</string>
    <string name="label_add_bill">Add Bill</string>
    <string name="label_six_hours">6 Hours</string>
    <string name="label_twelve_hours">12 Hours</string>
    <string name="label_one_day">1 Day</string>
    <string name="label_three_days">3 Days</string>
    <string name="label_one_week">1 Week</string>
    <string name="label_never">Never</string>
    <string name="toast_bank_account_got_deleted_successfully">Bank Account got deleted successfully</string>
    <string name="toast_category_already_exists">Category already exists</string>
    <string name="toast_new_bill_got_added">New Bill got added</string>
    <string name="toast_please_check_inputs">Please check your inputs!</string>
    <string name="toast_amount_to_save_got_saved_successfully">Amount to save got saved successfully</string>
    <string name="toast_password_got_saved_successfully">Password got saved successfully</string>
    <string name="toast_security_settings_got_saved_successfully">Security Setting got saved successfully</string>
    <string name="toast_password_got_reset_successfully">Password got reset successfully</string>
    <string name="toast_singed_out_successfully">Signed Out successfully</string>
    <string name="toast_data_got_deleted_successfully">All your Data got deleted successfully</string>
    <string name="text_password_preferences_notices">In this settings page you can edit your password and change your login settings. Please notice that your password is stored as plain text!</string>
</resources>