<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_cockpit"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/tab_cockpit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_navigation_history_24dp"
        android:title="@string/tab_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_statistics_black_24dp"
        android:title="@string/tab_statistics"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_database"
        android:icon="@drawable/ic_database"
        android:title="@string/tab_database"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings"
        app:showAsAction="ifRoom"/>

</menu>
