<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordPreferenceActivity"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/text_password_preferences_notices"
        android:layout_marginBottom="4dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_preference_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_password_preference_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_current_password"
            android:inputType="textPassword"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_preference_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_password_preference_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_preference_new_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_password_preference_new_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_password_preference_save_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_password"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="4dp"/>

    <Switch
        android:id="@+id/sw_password_preference_use_password_for_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password_for_login_required"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password_reset_time"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccentTextColor"/>

        <Spinner
            android:id="@+id/spn_password_preference_password_reset_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_password_preference_save_security_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_security_settings"
        style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>