<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_auto_pay_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_auto_pay_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal|numberSigned"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_auto_pay_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_marginTop="8dp" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_auto_pay_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
            android:hint="@string/hint_description" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-regular"
            android:letterSpacing="0.4"
            android:text="@string/label_bank_account"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:background="@color/colorDivider" />
    </LinearLayout>

    <android.support.design.chip.ChipGroup
        android:id="@+id/cg_auto_pay_bank_accounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-regular"
            android:letterSpacing="0.4"
            android:text="@string/label_bill_type"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:background="@color/colorDivider" />
    </LinearLayout>

    <android.support.design.chip.ChipGroup
        android:id="@+id/cg_auto_pay_bill_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:singleSelection="true">

        <android.support.design.chip.Chip
            android:id="@+id/chip_auto_pay_bill_type_input"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_input" />

        <android.support.design.chip.Chip
            android:id="@+id/chip_auto_pay_bill_type_output"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_output" />
    </android.support.design.chip.ChipGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-regular"
            android:letterSpacing="0.4"
            android:text="@string/label_auto_pay_type"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:background="@color/colorDivider" />
    </LinearLayout>

    <android.support.design.chip.ChipGroup
        android:id="@+id/cg_auto_pay_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:singleSelection="true">

        <android.support.design.chip.Chip
            android:id="@+id/chip_auto_pay_type_weekly"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_weekly" />

        <android.support.design.chip.Chip
            android:id="@+id/chip_auto_pay_type_monthly"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_monthly" />

        <android.support.design.chip.Chip
            android:id="@+id/chip_auto_pay_type_yearly"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_yearly" />
    </android.support.design.chip.ChipGroup>

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_auto_pay_select_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_select_category"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_auto_pay_cancel_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_marginEnd="8dp"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_auto_pay_create_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    </LinearLayout>

</LinearLayout>
