<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.dolinsek.elias.cashcockpit.HistoryFragment"
    android:orientation="vertical" >

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:overScrollMode="never"
                android:layout_marginBottom="8dp">

                <android.support.design.chip.ChipGroup
                    android:id="@+id/chip_group_bill_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:overScrollMode="never"
                    app:singleSelection="true"
                    app:chipSpacing="8dp">

                    <android.support.design.chip.Chip
                        android:id="@+id/chip_history_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:text="@string/label_input"/>

                    <android.support.design.chip.Chip
                        android:id="@+id/chip_history_output"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:text="@string/label_output"/>

                    <android.support.design.chip.Chip
                        android:id="@+id/chip_history_transfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:text="@string/label_transfer"/>

                </android.support.design.chip.ChipGroup>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:overScrollMode="never">

                <android.support.design.chip.ChipGroup
                    android:id="@+id/chip_group_chip_arrangement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    app:singleSelection="true"
                    app:chipSpacing="8dp"
                    app:checkedChip="@id/chip_history_newest_first">

                    <android.support.design.chip.Chip
                        android:id="@+id/chip_history_newest_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:text="@string/label_newest_first"/>

                    <android.support.design.chip.Chip
                        android:id="@+id/chip_history_oldest_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:text="@string/label_oldest_first"/>

                    <android.support.design.chip.Chip
                        android:id="@+id/chip_history_highest_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:text="@string/label_highest_price_first"/>

                    <android.support.design.chip.Chip
                        android:id="@+id/chip_history_lowest_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:text="@string/label_lowest_price_first"/>

                </android.support.design.chip.ChipGroup>
            </HorizontalScrollView>
        </LinearLayout>
    </android.support.design.card.MaterialCardView>

    <fragment
        android:id="@+id/fgm_history_not_enough_data_for_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        class="com.dolinsek.elias.cashcockpit.NotEnoughDataFragment"
        app:text="@string/label_no_data_for_statistic"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>

</LinearLayout>
