<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btn_select_category_create_category"
            android:text="@string/btn_create_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/btn_select_category_restore_default_categories"
            android:text="@string/btn_restore_default_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <fragment
        android:id="@+id/fgm_select_category_no_categories_found"
        class="com.dolinsek.elias.cashcockpit.NotEnoughDataFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginTop="12dp"
        app:text="@string/label_no_categories_found"
        android:layout_marginBottom="100dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_select_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
